# Organizarr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.adoc
.github/workflows/: release.yml  rust.yml
src/: config.rs  discovery.rs  logger.rs  main.rs  rules.rs  torrent.rs
tests/: e2e.rs
