# qBittorrent Mover - A tool to automatically move torrents to different categories based on their state.
# Copyright (C) 2023 Harrison Chin
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "qbittorrent_mover"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
log = "0.4"
log4rs = "1"
anyhow = "1"
futures = "0.3"
fs_extra = "1"
trash = "5"

[dev-dependencies]
mockito = "1"
tempfile = "3"
serde_json = "1"
